# fedoragold

./: .CMakeListsAndroid.txt.swp  .CMakeListsArm.txt.swp  .gitignore  CMakeLists.txt  CMakeListsAndroid.txt  CMakeListsArm.txt  CMakeListsDebian.txt  CMakeListsEmscripten.txt  CMakeListsLinux.txt  CMakeListsLinuxWindowsMac.txt  CMakeListsMac.txt  CMakeListsUbuntu18.txt  CTestCustom.cmake  Makefile  README.md  addToCMakeLists.txt  checkheight.sh  cpit.sh  download.sh  emchanges.txt  makeboost.sh  makeboost.sh.notes  makefedora.sh  makefedora_emscripten.sh  makefedora_mac.sh  makefedora_win.sh  stopdaemon.sh  test.sh  testfedora.sh  testmine.sh  walletd_status.sh  webserver.sh
src/: CMakeLists.txt  CryptoNoteConfig.h  version.h.in
src/BlockchainExplorer/: BlockchainExplorer.cpp  BlockchainExplorerDataBuilder.cpp  BlockchainExplorerDataBuilder.h
src/Common/: Base58.cpp  ConsoleHandler.cpp  IInputStream.cpp  IInputStream.h  IOutputStream.cpp  IOutputStream.h  JsonValue.cpp  JsonValue.h  Math.cpp  MemoryInputStream.cpp  MemoryInputStream.h  ShuffleGenerator.h  StdInputStream.cpp  StdInputStream.h  StdOutputStream.cpp  StdOutputStream.h  StreamTools.cpp  StreamTools.h  StringBuffer.h  StringInputStream.cpp  StringInputStream.h  StringOutputStream.cpp  StringOutputStream.h  VectorOutputStream.cpp  VectorOutputStream.h  int-util.h
src/ConnectivityTool/: ConnectivityTool.cpp
src/CryptoNoteCore/: .CryptoNoteFormatUtils.cpp.swp  .Currency.cpp.swp  .SwappedVector.h.swp  Account.cpp  Account.h  BlockIndex.cpp  Blockchain.cpp  Blockchain.h  BlockchainIndices.cpp  Checkpoints.cpp  Checkpoints.h  Core.cpp  Core.h  CryptoNoteFormatUtils.cpp  CryptoNoteFormatUtils.h  CryptoNoteSerialization.cpp  CryptoNoteSerialization.h  CryptoNoteTools.cpp  CryptoNoteTools.h  Currency.cpp  Currency.h  ICore.h  Miner.cpp  Miner.h  OnceInInterval.h  SwappedMap.cpp  SwappedMap.h  SwappedVector.cpp  SwappedVector.h  Transaction.cpp  Transaction.h  TransactionExtra.cpp  TransactionExtra.h  TransactionPool.cpp  TransactionPool.h  TransactionPrefixImpl.cpp  TransactionPrefixImpl.h
src/CryptoNoteProtocol/: CryptoNoteProtocolDefinitions.h  CryptoNoteProtocolHandler.cpp  CryptoNoteProtocolHandler.h
src/Daemon/: Daemon.cpp  DaemonCommandsHandler.cpp
src/HTTP/: HttpRequest.h  HttpResponse.h
src/InProcessNode/: InProcessNode.cpp  InProcessNode.h
src/JsonRpcServer/: JsonRpcServer.cpp  JsonRpcServer.h
src/Logging/: .LoggerMessage.cpp.swp  .iostreamsb.h.swp  CommonLogger.cpp  CommonLogger.h  ConsoleLogger.cpp  ConsoleLogger.h  ILogger.h  LoggerGroup.h  LoggerManager.cpp  LoggerMessage.cpp  StreamLogger.h  iostreamsb.h
src/Logging/bits/: locale_classes.h  locale_classes.tcc  (+2 more)
src/Miner/: BlockchainMonitor.cpp  Miner.cpp  MinerManager.cpp
src/Mnemonics/: electrum-words.cpp
src/NodeRpcProxy/: NodeRpcProxy.cpp  NodeRpcProxy.h
src/Optimizer/: Optimizer.cpp
src/P2p/: IP2pNodeInternal.cpp  LevinProtocol.cpp  LevinProtocol.h  NetNode.cpp  NetNode.h  P2pConnectionProxy.cpp  P2pConnectionProxy.h  P2pContext.cpp  P2pContext.h  P2pInterfaces.h  P2pNetworks.h  P2pNode.cpp  P2pNode.h  P2pProtocolDefinitions.h  PeerListManager.cpp
src/PaymentGate/: .WalletService.cpp.swp  NodeFactory.cpp  PaymentServiceJsonRpcMessages.cpp  PaymentServiceJsonRpcMessages.h  PaymentServiceJsonRpcServer.cpp  PaymentServiceJsonRpcServer.h  WalletFactory.cpp  WalletFactory.h  WalletService.cpp  WalletService.h  WalletServiceErrorCategory.h
src/PaymentGateService/: .PaymentGateService.cpp.swp  PaymentGateService.cpp  PaymentGateService.h  PaymentServiceConfiguration.cpp  PaymentServiceConfiguration.h  main.cpp
src/Rpc/: .RpcServer.cpp.swp  CoreRpcServerCommandsDefinitions.h  HttpClient.cpp  HttpClient.h  HttpServer.cpp  HttpServer.h  JsonRpc.cpp  JsonRpc.h  RpcServer.cpp  RpcServer.h  RpcServerConfig.cpp  RpcServerConfig.h
src/Serialization/: BinaryInputStreamSerializer.cpp  BinaryInputStreamSerializer.h  BinaryOutputStreamSerializer.cpp  BinaryOutputStreamSerializer.h  BlockchainExplorerDataSerialization.cpp  BlockchainExplorerDataSerialization.h  ISerializer.h  IStream.h  JsonInputValueSerializer.cpp  JsonInputValueSerializer.h  JsonOutputStreamSerializer.cpp  JsonOutputStreamSerializer.h  KVBinaryInputStreamSerializer.cpp  KVBinaryInputStreamSerializer.h  KVBinaryOutputStreamSerializer.cpp  KVBinaryOutputStreamSerializer.h  MemoryStream.h  SerializationOverloads.cpp  SerializationOverloads.h  SerializationTools.h
src/SimpleWallet/: ParseArguments.cpp  PasswordContainer.cpp  PasswordContainer.h  SimpleWallet.cpp  SimpleWallet.h  Tools.cpp  Transfer.cpp  Transfer.h
src/SimpleWallet0/: SimpleWallet.h  Transfer.cpp
src/System/: .IpAddress.cpp.swp  .IpAddress.h.swp  ContextGroupTimeout.cpp  InterruptedException.cpp  IpAddress.cpp  IpAddress.h  TcpStream.cpp  TcpStream.h
src/Transfers/: BlockchainSynchronizer.cpp  BlockchainSynchronizer.h  SynchronizationState.h  TransfersConsumer.cpp  TransfersConsumer.h  TransfersContainer.cpp  TransfersSubscription.cpp  TransfersSynchronizer.cpp  TransfersSynchronizer.h
src/Wallet/: .WalletGreen.cpp.swp  .WalletGreen.h.swp  IFusionManager.h  WalletErrors.h  WalletGreen.cpp  WalletGreen.h  WalletIndices.h  WalletRpcServer.cpp  WalletRpcServer.h  WalletRpcServerCommandsDefinitions.h  WalletSerialization.cpp  WalletSerialization.h  WalletSerializationV5.cpp  WalletSerializationV5.h
src/WalletLegacy/: WalletLegacy.cpp  WalletLegacy.h  WalletSendTransactionContext.h  WalletTransactionSender.cpp  WalletUnconfirmedTransactions.cpp  WalletUnconfirmedTransactions.h  WalletUserTransactionsCache.cpp  WalletUserTransactionsCache.h
src/crypto/: .slow-hash.inl.swp  aes_helper.c  bmw.c  c99_endian.h  chacha8.c  chacha8.h  crypto.cpp  crypto.h  echo.c  hash-extra-argon2.c  hash-extra-bmw.c  hash-extra-echo.c  hash-extra-fugue.c  hash-extra-gost.c  hash-extra-luffa.c  hash-extra-shavite.c  hash-ops.h  hash.h  luffa.c  oaes_lib.c  oaes_lib.c2  random.c  shavite.c  skein_port.h  slow-hash-common.h  slow-hash.c  slow-hash.inl  sph_types.h  tree-hash.c  variant2_int_sqrt.h  wild_keccak.cpp  wild_keccak.h
(+179 files in other folders)
